--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
-  "builds": [
+  "builds": 
     {
       "src": "index.js",
       "use": "@vercel/node"
     }
-  ]
+  
 
 }
