--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
   "version": 2,
-  "builds": 
+  "builds": [
     {
       "src": "index.js",
       "use": "@vercel/node"
     }
-  
+  ],
+    "routes": [
+    {
+      "src": "/api/",
+      "dest": "/index.js"
+    }
+    ]
 
 }
