--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,21 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "codenya/**",
+      "use": "@vercel/static"
     }
   ],
-    "routes": [
+  "routes": [
     {
-      "src": "(.*)",
+      "src": "/codenya/(.*)",
+      "dest": "/codenya/$1"
+    },
+    {
+      "src": "/(.*)",
       "dest": "/index.js"
     }
-    ]
-
+  ],
+  "ignoreCommand": "gitignore"
 }
