--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "qs": "^6.13.1",
-    "form-data": "^4.0.1"
+    "form-data": "^4.0.1",
+    "codenya-tikwm2": "file:./codenya/tikwm2.js",
+  "codenya-gemini": "file:./codenya/gemini.js"
   }
 }
