--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "^4.21.1",
     "qs": "^6.13.1",
     "form-data": "^4.0.1",
-    "codenya-tikwm2": "file:./codenya/tikwm2.js",
-  "codenya-gemini": "file:./codenya/gemini.js"
+    "tikwm2": "file:./codenya/tikwm2.js",
+  "gemini": "file:./codenya/gemini.js"
   }
 }
