--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,15 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "codenya/*.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "(.*)",
       "dest": "/index.js"
     }
   ]
