--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "qs": "^6.13.1",
     "form-data": "^4.0.1",
     "tikwm2": "file:./codenya/tikwm2.js",
-  "gemini": "file:./codenya/gemini.js"
+  "gemini": "file:./codenya/gemini.js",
+    'distube/ytdl-core': "^4.15.1"
   }
 }
