--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "form-data": "^4.0.1",
     "tikwm2": "file:./codenya/tikwm2.js",
   "gemini": "file:./codenya/gemini.js",
-    'distube/ytdl-core': "^4.15.1"
+    '@distube/ytdl-core': "^4.15.1"
   }
 }
