--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "path": "^0.12.7",
     "qs": "^6.13.1",
     "form-data": "^4.0.1",
     "tikwm2": "file:./codenya/tikwm2.js",
