--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.8",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
+    "sqlite3": "^5.1.7",
     "express": "^4.21.1",
     "path": "^0.12.7",
     "https": "^1.0.0",
