--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tobyg74/tiktok-api-dl": "^1.2.1",
     "rahad-all-downloader": "^2.1.17",
     "btch-downloader": "^2.8.2",
-    "got": "^14.4.5"
+    "got": "^14.4.5",
+    "@distube/ytdl-core": "^4.15.1"
   }
 }
